unhide info modal for user guidance

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     </div>
   </div>
 
-  <div id="infoModal" class="modal-overlay" hidden>
+  <div id="infoModal" class="modal-overlay">
     <div class="modal-content info">
       <h2>Como funciona o desafio?</h2>
       <p>Quatro pessoas precisam atravessar uma ponte durante a noite.</p>
