shorten land label for clarity in the scene

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div id="scene">
           <div class="sky"></div>
           <div class="land left">
-            <span class="land-label">Lado do acampamento</span>
+            <span class="land-label">Acampamento</span>
           </div>
           <div class="bridge-area">
             <div class="rope rope-front"></div>
